force-app/main/default/objects/Job_Posting__c.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <formula>&quot;You have received a new application for your &apos;&quot;&amp;Title__c&amp;&quot;&apos; job posting&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>This field captures the id of any attachment created in its parent record</description>
        <label>Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Email for Submissions</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <description>18/01/2016: This field is no longer in use. Can be deleted once microsites and relevant apex classes have been deleted.</description>
        <label>Contact Person or Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment_Id__c</fullName>
        <description>Captures the att id of any deleted attachment in its parent record</description>
        <label>Deleted Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>OR(
   TEXT(Owner:User.School__c) = &quot;The British Schools Foundation&quot;,
   TEXT(Owner:User.School__c) = &quot;NAE&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Controls the questions available on the employment application form on the new website. The &apos;Academic&apos; option will show additional questions to either of the other options.</inlineHelpText>
        <label>Posting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Support Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please keep this field relatively short i.e. an &apos;Introduction&apos; and add additional documentation such as the job description in the &apos;More Info About This Position&apos; section below.</inlineHelpText>
        <label>Introduction to Position</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>E_App_Staff_Member_Record_Type__c</fullName>
        <formula>&quot;0126F000001hW0U&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E/App. Staff Member Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>English Parent</label>
        <referenceTo>Job_Posting__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>english_parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Posting_Name_Postfix__c</fullName>
        <description>Used in submissions from the employment application form to append to the job posting name and identify whether the application was made for a specific job posting or using the general form.</description>
        <formula>&quot; (Job Posting)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Posting Name Postfix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language switch for website translation management.</description>
        <inlineHelpText>Select the language of your record.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Document_2__c</fullName>
        <inlineHelpText>Make sure that the document that this link points to is made publicly available. It is recommend that the document is hosted in Google Drive to provide the best experience for the website user.</inlineHelpText>
        <label>Link to Document 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Document_3__c</fullName>
        <inlineHelpText>Make sure that the document that this link points to is made publicly available. It is recommend that the document is hosted in Google Drive to provide the best experience for the website user.</inlineHelpText>
        <label>Link to Document 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Document_4__c</fullName>
        <inlineHelpText>Make sure that the document that this link points to is made publicly available. It is recommend that the document is hosted in Google Drive to provide the best experience for the website user.</inlineHelpText>
        <label>Link to Document 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Document__c</fullName>
        <inlineHelpText>Make sure that the document that this link points to is made publicly available. It is recommend that the document is hosted in Google Drive to provide the best experience for the website user.</inlineHelpText>
        <label>Link to Document 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name_of_Document_2__c</fullName>
        <label>Name of Document 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Document_3__c</fullName>
        <label>Name of Document 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Document_4__c</fullName>
        <label>Name of Document 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Document__c</fullName>
        <label>Name of Document 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_1_Translation_Per_Language_Allowed__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A UID for translated records. Populated via a workflow rule, ensures a unique combination of English_Parent.Id and Language__c to prevent more than one translation per language. Field names in this way to make error message more understandable.</description>
        <label>Only 1 Translation Per Language Allowed!</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owned_by_Inactive_User__c</fullName>
        <formula>IF(Owner:User.IsActive = FALSE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned by Inactive User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Used in views only</description>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path_Alias__c</fullName>
        <inlineHelpText>OPTIONAL. Paste here the ending url path of the node on the old school website. Ex: from www.oldsite.com/curriculum/overview.asp paste &quot;curriculum/1styear/overview&quot;. No initial &quot;/&quot; no &quot;.asp&quot; or similar.</inlineHelpText>
        <label>Path Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_ID__c</fullName>
        <label>Photo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.ImageServer?id=&quot; &amp; Photo_ID__c &amp; &quot;&amp;oid=&quot; &amp; $Organization.Id, &quot; Photo Available&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want a teaser of the node to appear on the school fb page. Not valid for group website posts.</inlineHelpText>
        <label>Post to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click to publish this record on your school website</inlineHelpText>
        <label>Publish on School Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Dependant_Details__c</fullName>
        <description>Ben 26/09/17: This field will shortly be retired due to a request made by heads of school to always ask whether or not an applicant has dependants to avoid any surprises later. I&apos;ve left the field behind the scenes (but not on the page layout) so that the link to the websites isn&apos;t compromised as the value in this field is pulled from SF. It can be removed later once that connection has been severed.</description>
        <inlineHelpText>Includes a question requesting the basic details of any dependants in the employment application form</inlineHelpText>
        <label>Request Dependant Details?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_List__c</fullName>
        <description>A middle step from the school override field to the school list copy field.</description>
        <formula>IF(OR(ISNULL(School_Override_Field__c), INCLUDES( School_Override_Field__c, &quot;No override&quot;)), TEXT( CreatedBy.School__c ),  
IF ( INCLUDES ( School_Override_Field__c , &quot;Nanjing&quot; ), &quot;nanjing1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Marbella&quot; ), &quot;marbella1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Navarra&quot; ), &quot;navarra1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Tashkent&quot; ), &quot;tashkent1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;São Paulo&quot; ), &quot;saopaulo1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Kuala Lumpur&quot; ), &quot;kualalumpur1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Moscow&quot; ), &quot;moscow1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Manila&quot; ), &quot;manila1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Yangon&quot; ), &quot;yangon1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;New York&quot; ), &quot;newyork1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Brasilia&quot; ), &quot;brasilia1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Group Site&quot; ), &quot;The British Schools Foundation;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 1&quot; ), &quot;Sandbox 1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 2&quot; ), &quot;Sandbox 2;&quot;,null ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to set the values from the picklist in a text array. The Schools List Copy field will copy this field. Should be hidden.</inlineHelpText>
        <label>School List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Override_Count__c</fullName>
        <formula>IF(INCLUDES(School_Override_Field__c, &quot;No Override&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Nanjing&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Marbella&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Navarra&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Tashkent&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;São Paulo&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Kuala Lumpur&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Moscow&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Manila&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;New York&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Yangon&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Group Site&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 1&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 2&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Override Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <inlineHelpText>Publish this record on the websites of the selected schools</inlineHelpText>
        <label>School Override Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
                <value>
                    <fullName>Sandbox 1</fullName>
                </value>
                <value>
                    <fullName>Sandbox 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <formula>IF( 
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;), 
   English_Parent__r.School_List__c, 
   School_List__c 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Sites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_as_Featured_Job_Posting_Until__c</fullName>
        <inlineHelpText>Entering a date in this field will prioritise the Job Posting in the &apos;Employment Opportunities&apos; sidebar block around the site until the date indicated.</inlineHelpText>
        <label>Show as Featured Job Posting Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>VALUE( 

IF(TEXT(Show_as_Featured_Job_Posting_Until__c) != &quot;&quot;, &quot;1&quot;, &quot;2&quot;) &amp; 

Name  

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_id__c</fullName>
        <description>To be used on the group and school sites. Ask Nico before removing</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web id</label>
        <type>Text</type>
    </fields>
    <label>Job Posting</label>
    <listViews>
        <fullName>All_Job_Postings_Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Schools_List_Copy__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Job Postings (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>BSF_Group_Directors_Admin</group>
            <group>NAE_Group_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Job_Postings_Unpublished</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Schools_List_Copy__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Job Postings (Unpublished)</label>
        <language>en_US</language>
        <sharedTo>
            <group>BSF_Group_Directors_Admin</group>
            <group>NAE_Group_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Job_Postings_Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Job Postings (Published)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Job_Postings_Unpublished</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Job Postings (Unpublished)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X01A_ISM_Job_Postings_Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>moscow1,The International School of Moscow</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>01A. ISM Job Postings (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01B_ISM_Job_Postings_Unpublished</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>moscow1,The International School of Moscow</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>01B. ISM Job Postings (Unpublished)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02A_BSKL_Job_Postings_Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>kualalumpur1,The British International School of Kuala Lumpur</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02A. BSKL Job Postings (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_BSKL</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02B_BSKL_Job_Postings_Unpublished</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>kualalumpur1,The British International School of Kuala Lumpur</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>02B. BSKL Job Postings (Unpublished)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_BSKL</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03A_BSNJ_Job_Postings_Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>nanjing1,The British School of Nanjing</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>03A. BSNJ Job Postings (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_BSNJ</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03B_BSNJ_Job_Postings_Unpublished</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>nanjing1,The British School of Nanjing</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>03B. BSNJ Job Postings (Unpublished)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_BSNJ</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X04A_BST_Job_Postings_Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>tashkent1,The British School of Tashkent</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>04A. BST Job Postings (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>BST_Headteacher</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X04B_BST_Job_Postings_Unpublished</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>tashkent1,The British School of Tashkent</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>04B. BST Job Postings (Unpublished)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>BST_Headteacher</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X05A_NAISM_Job_Postings_Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>manila1,Nord Anglia International School Manila</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>05A. NAISM Job Postings (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>NAISM_Headteacher</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X05B_NAISM_Job_Postings_Unpublished</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Department__c</columns>
        <columns>Request_Dependant_Details__c</columns>
        <columns>Show_as_Featured_Job_Posting_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School_List__c</field>
            <operation>contains</operation>
            <value>manila1,Nord Anglia International School Manila</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>05B. NAISM Job Postings (Unpublished)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>NAISM_Headteacher</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>